--- a/index.html
+++ b/index.html
@@ -5,9 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Deliciuos - Chocolate Pizza</title>
-  
+    <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+   <header>
+       <div class="logoleft">
+        <img src="./assets/logo.png" alt="">
+        <div class="logo-text"> 
+            <h1>Delicious</h1>
+            <p>THE BEST FOOD BLOG ON THE WEB</p>
+        </div>
+       </div>
+      <div class="social-icons">
+        <span>
+            <a href=""><img src="./assets/fb-icon.png" alt=""></a>
+            <a href=""><img src="./assets/twit-icon.png" alt=""></a>
+            <a href=""><img src="./assets/gp-icon.png" alt=""></a>
+            <a href=""><img src="./assets/insta-icon.png" alt=""></a>
+            <a href=""><img src="./assets/flic-icon.png" alt=""></a>
+            <a href=""><img src="./assets/pint-icon.png" alt=""></a>
+        </span>  
+       <span
+        <a href=""><img src="./assets/rss-icon.png" alt=""></a>
+        <a href=""><img src="./assets/mail-icon.png" alt=""></a>
+    </span>   
+        </div>
+   </header>
+   <div class="headerLine"><img src="" alt=""></div>
+<main></main>
+<footer></footer>
 </body>
 </html>
