Class10-Lab01aFooter

--- a/index.html
+++ b/index.html
@@ -78,26 +78,23 @@
             <li><input type="checkbox" name="" id=""><label for="">1 cup honey roaster peacans roughly chpped</label></li>
         </ul>
     </article>
-
-    <hr>
-
+    <div class="BottomLine"><img src="" alt=""></div>
     <article class="share-recipe">
         <section class="float-left">
-            <img src="img/van-pic.png" alt="">
+            <img src="./assets/van-pic.png" alt="">
             <div>
                 <p class="username">Vanaessa Stevenson</p>
                 <p>Food enthusiast, photography fan. Add a point a pinch of raw foodism and thats pretty much who I am.</p>
             </div>
         </section>
 
-        <section class="float-right">
-            <a href="">SHARE RECIPE</a>
+        <section class="share-right">
+            <p>SHARE RECIPE</p>
         </section>
     </article>
 </main>
-
 <footer>
-    <img src="img/small-logo.png" alt="">
+    <img src="./assets/small-logo.png" alt=""> 
     <p> Delicious &copy;2013.All Rights Reserved.</p>
 <p>Proudly published with Ghost.</p>
 </footer>
