--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Pangolin&family=Yellowtail&display=swap" rel="stylesheet">
 </head>
 <body>
-  
    <header>
        <div class="logoleft">
         <img src="./assets/logo.png" alt="">
@@ -53,7 +52,7 @@
         <img class="main-article-image" src="./assets/choco-pizza.png" alt="">
     </article>
 
-    <article class="">
+    <article >
         <p>Lorem, ipsum dolor sit amet consectetur  mpora natus quoddolor sit, amet consectetur adipisicing elit. Nostrum quas deserunt aliquid, molestiae suscipit eum temporibus, quis ipsum ad porro sunt tempora natus quod Ab delectus, corporis nobis laboriosam quam consequuntur cupiditate nulla dolor voluptatem, saepe commodi beatae laudantium doloribus nemo maxime quae at aliquam adipisci.</p>
         <p>Lorem, ipsum dolor sit amet consectetur  mpora natus quoddolor sit, amet consectetur adipisicing elit. Nostrum quas deserunt aliquid, molestiae suscipit eum temporibus, quis ipsum ad porro sunt tempora natus quod Ab delectus, corporis nobis laboriosam quam consequuntur cupiditate nulla dolor voluptatem, saepe commodi beatae laudantium doloribus nemo maxime quae at aliquam adipisci.</p>
         <p>Lorem, ipsum dolor sit amet consectetur  mpora natus quoddolor sit, amet consectetur adipisicing elit. Nostrum quas deserunt aliquid, molestiae suscipit eum temporibus, quis ipsum ad porro sunt tempora natus quod Ab delectus, corporis nobis laboriosam quam consequuntur cupiditate nulla dolor voluptatem, saepe commodi beatae laudantium doloribus nemo maxime quae at aliquam adipisci.</p>
@@ -98,7 +97,7 @@
     <p> Delicious &copy;2013.All Rights Reserved.</p>
 <p>Proudly published with Ghost.</p>
 </footer>
-</main>
-<footer></footer>
+
+
 </body>
 </html>
